--- a/back_end/package.json
+++ b/back_end/package.json
@@ -14,6 +14,7 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "express": "^4.18.1",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "uuid": "^8.3.2"
   }
 }
